
    HIVE-69. genMapRedTasks uses tree walker. (Namit through zshao)

    HIVE-249. Give execute permissions to the hive binary 
    (Jeff Hammerbacher via athusoo)

    HIVE-231. Create junit reports for tests. (Johan Oskarsson via athusoo)

    HIVE-119. Make error messages more informative. (Pete Wyckoff via athusoo)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-255. Propagate user name to Hive metastore. (Prasad Chakka via zshao)

    HIVE-235. Fixed DynamicSerDe to work with null values with Thrift
    Protocols that can have missing fields for null values. (zshao)

    HIVE-222. Fixed Group by on a combination of disitinct and non distinct
    aggregates. (Ashish Thusoo via zshao)

    HIVE-161. Fixed xpath x.y when x is a null list. (zshao)

    HIVE-206. Fixed partition pruning check for uppercase table names.
    (Ashish Thusoo via zshao)

    HIVE-151. Tasks depending on other tasks cannot be a root task.
    (Namit Jain via zshao)

    HIVE-197. Fixed UDFToBoolean. (zshao)

    HIVE-171. Fixed select star with cluster by, distribute by and sort by.
    (zshao)

    HIVE-190. Fixed tests failed due to test running order. (zshao)

    HIVE-184. Tests fail due to including old hive jar files.
    (David Phillips via zshao)

    HIVE-188. Hive CLI quits when stdout is closed. (zshao)

    HIVE-104. Tables with at least 1 non-string columns to use DynamicSerDe.
    (zshao)

    HIVE-158. Make table aliases work for sampled tables in joins.
    (Raghotham Murthy via zshao)

    HIVE-168. Fixed join on a subquery with a group by. (Namit Jain via zshao)

    HIVE-169. Fixed configuration parameter used for determining join interval 
    in JoinOperator. (Namit Jain via zshao)

    HIVE-114. Drop partition does not delete data for external tables now.
    (Johan Oskarsson via zshao)

    HIVE-144. Hive/ql java source copied to build/ql/java to make it work 
    with eclipse. (Johan Oskarsson via zshao)
