@@ -65,6 +65,20 @@ end_import
 
 begin_import
 import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
+name|Text
+import|;
+end_import
+
+begin_import
+import|import
 name|com
 operator|.
 name|facebook
@@ -156,6 +170,28 @@ operator|.
 name|io
 operator|.
 name|*
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|ByteBuffer
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|charset
+operator|.
+name|CharacterCodingException
 import|;
 end_import
 
@@ -436,11 +472,10 @@ specifier|protected
 name|String
 name|nullString
 decl_stmt|;
-comment|/**    * The nullString in bytes    */
+comment|/**    * The nullString in UTF-8 bytes    */
 specifier|protected
-name|byte
-name|nullBuf
-index|[]
+name|Text
+name|nullText
 decl_stmt|;
 comment|/**    * A convenience class for tokenizing a TTransport    */
 class|class
@@ -547,9 +582,14 @@ return|;
 block|}
 name|String
 name|row
-init|=
-operator|new
-name|String
+decl_stmt|;
+try|try
+block|{
+name|row
+operator|=
+name|Text
+operator|.
+name|decode
 argument_list|(
 name|buf
 argument_list|,
@@ -557,7 +597,22 @@ literal|0
 argument_list|,
 name|length
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|CharacterCodingException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+name|e
+argument_list|)
+throw|;
+block|}
 name|tokenizer
 operator|=
 operator|new
@@ -1007,12 +1062,13 @@ operator|+
 name|mapSeparator
 argument_list|)
 expr_stmt|;
-name|nullBuf
+name|nullText
 operator|=
+operator|new
+name|Text
+argument_list|(
 name|nullString
-operator|.
-name|getBytes
-argument_list|()
+argument_list|)
 expr_stmt|;
 name|transportTokenizer
 operator|=
@@ -1949,6 +2005,13 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+name|Text
+name|tmpText
+init|=
+operator|new
+name|Text
+argument_list|()
+decl_stmt|;
 specifier|public
 name|void
 name|internalWriteString
@@ -1966,27 +2029,28 @@ operator|!=
 literal|null
 condition|)
 block|{
-specifier|final
-name|byte
-name|buf
-index|[]
-init|=
-name|str
+name|tmpText
 operator|.
-name|getBytes
-argument_list|()
-decl_stmt|;
+name|set
+argument_list|(
+name|str
+argument_list|)
+expr_stmt|;
 name|trans_
 operator|.
 name|write
 argument_list|(
-name|buf
+name|tmpText
+operator|.
+name|getBytes
+argument_list|()
 argument_list|,
 literal|0
 argument_list|,
-name|buf
+name|tmpText
 operator|.
-name|length
+name|getLength
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
@@ -1996,13 +2060,17 @@ name|trans_
 operator|.
 name|write
 argument_list|(
-name|nullBuf
+name|nullText
+operator|.
+name|getBytes
+argument_list|()
 argument_list|,
 literal|0
 argument_list|,
-name|nullBuf
+name|nullText
 operator|.
-name|length
+name|getLength
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
@@ -2064,53 +2132,11 @@ literal|false
 expr_stmt|;
 block|}
 block|}
-if|if
-condition|(
-name|str
-operator|!=
-literal|null
-condition|)
-block|{
-specifier|final
-name|byte
-name|buf
-index|[]
-init|=
-name|str
-operator|.
-name|getBytes
-argument_list|()
-decl_stmt|;
-name|trans_
-operator|.
-name|write
+name|internalWriteString
 argument_list|(
-name|buf
-argument_list|,
-literal|0
-argument_list|,
-name|buf
-operator|.
-name|length
+name|str
 argument_list|)
 expr_stmt|;
-block|}
-else|else
-block|{
-name|trans_
-operator|.
-name|write
-argument_list|(
-name|nullBuf
-argument_list|,
-literal|0
-argument_list|,
-name|nullBuf
-operator|.
-name|length
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 specifier|public
 name|void
